fixing contrast

--- a/themes/yaub/static/css/modular/components/tags.css
+++ b/themes/yaub/static/css/modular/components/tags.css
@@ -159,14 +159,17 @@ a.badge-tag-list-page {
 
 #body .categories a.observability {
     background-color: var(--CATEGORY-observability) !important;
+    color: var(--CATEGORY-font-black) !important;
 }
 
 #body .categories a.distributed-tracing {
     background-color: var(--CATEGORY-tracing) !important;
+    color: var(--CATEGORY-font-black) !important;
 }
 
 #body .categories a.pod-placement {
     background-color: var(--CATEGORY-placement) !important;
+    color: var(--CATEGORY-font-black) !important;
 }
 
 #body .categories a.network,
@@ -180,14 +183,17 @@ a.badge-tag-list-page {
 #body .categories a.oidc,
 #body .categories a.keycloak {
     background-color: var(--CATEGORY-auth) !important;
+    color: var(--CATEGORY-font-black) !important;
 }
 
 #body .categories a.tekton {
     background-color: var(--CATEGORY-tekton) !important;
+    color: var(--CATEGORY-font-black) !important;
 }
 
 #body .categories a.helm-charts {
     background-color: var(--CATEGORY-helm) !important;
+    color: var(--CATEGORY-font-black) !important;
 }
 
 #body .categories a.cert-manager {
@@ -201,5 +207,6 @@ a.badge-tag-list-page {
 
 #body .categories a.hosted-control-plane {
     background-color: var(--CATEGORY-hcp) !important;
+    color: var(--CATEGORY-font-black) !important;
 }
 
